# probatio-svm

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  STAGE0_DESIGN.md
.github/workflows/: pages.yml
crates/contract/: Cargo.toml
crates/contract/src/: lib.rs
crates/harness/: Cargo.toml
crates/harness/src/: agent.rs  hostile.rs  jupiter.rs  lib.rs  llm.rs  main.rs  policy.rs  redteam.rs  transcript.rs  verifier.rs  world.rs
demo/: README.md  build.js  package.json  record.js
demo/captured/: enforce.txt  gallery.txt  redteam.txt  ref.txt  svm.txt  transcript.txt
docs/: PITCH.md
docs/tasks/: 001-contract-and-refmodel.md  002-pinocchio-perp-litesvm.md  003-pinocchio-guard.md  004-inline-enforcement.md  005-redteam-discovery.md  006-hostile-episodes.md  007-llm-agent.md  008-agent-hardening.md  009-agent-gallery.md  010-jupiter-adapter.md  011-dashboard.md  012-felt-moment-hero.md  013-judge-first-interactive.md  014-always-show-evidence.md  015-production-intake-honesty.md  016-dogfood-crucible-momentum.md
gallery/: README.md  core-crucible-momentum.json  core-gamer.json  core-honest.json  core-phantom.json  jupiter-drift.json  jupiter-neutral.json  sample-scripted-drift.json
programs/guard/: Cargo.toml
programs/guard/src/: lib.rs
programs/perp/: Cargo.toml
programs/perp/src/: lib.rs
reviews/: 001-contract-and-refmodel.md  002-pinocchio-perp-litesvm.md  003-pinocchio-guard.md  004-inline-enforcement.md  005-redteam-discovery.md  006-hostile-episodes.md  007-llm-agent.md  008-agent-hardening.md  009-agent-gallery.md  010-jupiter-adapter.md  011-dashboard.md  012-felt-moment-hero.md  013-judge-first-interactive.md  014-always-show-evidence.md  015-production-intake-honesty.md  016-dogfood-crucible-momentum.md
web/: README.md  build.js  index.html  package.json
